Formatted the files

--- a/Bardica/join.html
+++ b/Bardica/join.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name='keywords' content="Bandas, Música, Registro, Contraseña, Unirse">
-  <meta name="description" content="Se parte de más de 1.000.000 de usuarios que ya eligieron Bárdica para darle soundtrack a su vida.">
+  <meta name="description"
+    content="Se parte de más de 1.000.000 de usuarios que ya eligieron Bárdica para darle soundtrack a su vida.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bárdica-Únete </title>
@@ -29,25 +30,25 @@
     </form>
     <!-- Sector de conectividad-->
     <div id="connectivity">
-        <a href="#"><i class="fab fa-chromecast"></i></a></li>
+      <a href="#"><i class="fab fa-chromecast"></i></a></li>
     </div>
     <nav id="navbar">
       <div class="navbarContainer">
-          <input type="checkbox" name="" id="">
-          <div class="hamburgerLines">
-              <span class="line line1"></span>
-              <span class="line line2"></span>
-              <span class="line line3"></span>
-          </div>
-          <ul class="menuItems">
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="library.html">Biblioteca</a></li>
-              <li><a href="ambience.html">Ambientar</a></li>
-              <li><a href="#">Únete</a></li>
-              <li><a href="about.html">Sobre nosotros</a></li>
-          </ul>
+        <input type="checkbox" name="" id="">
+        <div class="hamburgerLines">
+          <span class="line line1"></span>
+          <span class="line line2"></span>
+          <span class="line line3"></span>
+        </div>
+        <ul class="menuItems">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="library.html">Biblioteca</a></li>
+          <li><a href="ambience.html">Ambientar</a></li>
+          <li><a href="#">Únete</a></li>
+          <li><a href="about.html">Sobre nosotros</a></li>
+        </ul>
       </div>
-  </nav>
+    </nav>
   </header>
   <main class="mainContainer">
 
@@ -107,4 +108,5 @@
   </footer>
 </body>
 <script src="/Script/script.js"></script>
+
 </html>
