--- a/Bardica/about.html
+++ b/Bardica/about.html
@@ -59,7 +59,7 @@
                     </h3>
                 </div>
                 <div class="quoteContent">
-                    <img src="/Assets/alestorm.jpg" alt="Imagen Alestorm">
+                    <img src="Assets/alestorm.jpg" alt="Imagen Alestorm">
                     <p class="quote">
                         La música es sinónimo de libertad, de tocar lo que quieras y como quieras,
                         siempre que sea bueno y tenga pasión, que la música sea el alimento del amor.
@@ -80,7 +80,7 @@
                         Ya no se trataba de una herramienta para unos pocos; era tiempo de expandirse.
                     </p>
                     <div class="imageContainer">
-                        <img src="/Assets/project.jpg" alt="Imagen proyecto IT">
+                        <img src="Assets/project.jpg" alt="Imagen proyecto IT">
                         <p>Nuestro equipo en un día normal de trabajo.</p>
                     </div>
 
@@ -105,7 +105,7 @@
                         creciendo!
                     </p>
                     <div class="imageContainer">
-                        <img src="/Assets/crit role.jpg" alt="Grupo Crit Role">
+                        <img src="Assets/crit role.jpg" alt="Grupo Crit Role">
                         <p>Critical Role hace uso de Bárdica</p>
                     </div>
 
@@ -152,6 +152,6 @@
         </div>
     </footer>
 </body>
-<script src="/Script/script.js"></script>
+<script src="Script/script.js"></script>
 
 </html>
