Styles embelished. Corrected folder rooting.

--- a/Src/ambience.html
+++ b/Src/ambience.html
@@ -10,15 +10,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bárdica-Ambienta </title>
   <link rel="shortcut icon" href="Assets/Hurd.ico" type="image/x-icon">
-  <link href="Styles/main.css" rel="stylesheet">
+  <link href="../Styles/main.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/04883203e6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header id="mainHeader">
     <!-- Logo de la página -->
-    <a href="index.html" id="brand">
-      <img class="logo" src="Assets/hurd.ico" alt="Logo del sitio">
+    <a href="../index.html" id="brand">
+      <img class="logo" src="../Assets/hurd.ico" alt="Logo del sitio">
       <div class="">Bárdica</div>
     </a>
     <!-- Barra de búsqueda de canciones o artistas -->
@@ -41,7 +41,7 @@
           <span class="line line3"></span>
         </div>
         <ul class="menuItems">
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="../index.html">Inicio</a></li>
           <li><a href="library.html">Biblioteca</a></li>
           <li><a href="#">Ambientar</a></li>
           <li><a href="join.html">Únete</a></li>
@@ -62,7 +62,7 @@
         <!-- Cada section incluye 4 cards ordenadas en 2x2 -->
         <article>
           <a href="#">
-            <img src="Assets/Skyrim.jpg" alt="Disco Skyrim Ost">
+            <img src="../Assets/Skyrim.jpg" alt="Disco Skyrim Ost">
             <h3 class="subtitle">Entrando al Calabozo</h3>
           </a>
           <p>Para ambientar cuevas y calabozos</p>
@@ -70,7 +70,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/D&D.jpg" alt="Disco Midnight Syndicate">
+            <img src="../Assets/D&D.jpg" alt="Disco Midnight Syndicate">
             <h3 class="subtitle">Tiren Iniciativa</h3>
           </a>
           <p>Para todo tipo de batallas</p>
@@ -78,7 +78,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/witcher.jpg" alt="Disco Witcher 3 Ost">
+            <img src="../Assets/witcher.jpg" alt="Disco Witcher 3 Ost">
             <h3 class="subtitle">El Overworld</h3>
           </a>
           <p>Para esos largos viajes a caballo</p>
@@ -86,7 +86,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/Baldur.jpg" alt="Disco Baldur's Gate Ost">
+            <img src="../Assets/Baldur.jpg" alt="Disco Baldur's Gate Ost">
             <h3 class="subtitle">Misiones y Shopping</h3>
           </a>
           <p>Para tu tiempo en ciudades y pueblos</p>
@@ -101,7 +101,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/fight.jpg" alt="Pathfinder Combat">
+            <img src="../Assets/fight.jpg" alt="Pathfinder Combat">
             <h3 class="subtitle">Efectos de Combate</h3>
           </a>
           <p>Espadas, conjuros y golpes</p>
@@ -109,7 +109,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/landscape.jpg" alt="Sonidos de Ambiente">
+            <img src="../Assets/landscape.jpg" alt="Sonidos de Ambiente">
             <h3 class="subtitle">Sonidos Ambientales</h3>
           </a>
           <p>Lluvia, pisadas y demás</p>
@@ -117,7 +117,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/tavern.jpg" alt="En la Taberna">
+            <img src="../Assets/tavern.jpg" alt="En la Taberna">
             <h3 class="subtitle">En la Taberna</h3>
           </a>
           <p>Música, conversaciones y cánticos</p>
@@ -125,7 +125,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/Dungeon.jpg" alt="En el Calabozo">
+            <img src="../Assets/Dungeon.jpg" alt="En el Calabozo">
             <h3 class="subtitle">En el Calabozo</h3>
           </a>
           <p>Puertas, eco y conversaciones distantes</p>
@@ -138,7 +138,7 @@
     <div class="musicBar mainContainer">
       <div class=" musicInfo">
         <!-- musicInfo incluye la imágen del tema actual, el nombre y el artista -->
-        <img src="Assets/Ys.jpg" alt="Disco YS IX Ultimate">
+        <img src="../Assets/Ys.jpg" alt="Disco YS IX Ultimate">
         <div class="musicDesc">
           <h4>Norse Wind</h4>
           <p>Falcom Sound Team</p>
@@ -161,6 +161,6 @@
     </div>
   </footer>
 </body>
-<script src="/Script/script.js"></script>
+<script src="../Script/script.js"></script>
 
 </html>
