--- a/Src/join.html
+++ b/Src/join.html
@@ -10,15 +10,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bárdica-Únete </title>
   <link rel="shortcut icon" href="Assets/Hurd.ico" type="image/x-icon">
-  <link href="Styles/main.css" rel="stylesheet">
+  <link href="../Styles/main.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/04883203e6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header id="mainHeader" class="joinMainHeader">
     <!-- Logo de la página -->
-    <a href="index.html" id="brand">
-      <img class="logo" src="Assets/hurd.ico" alt="Logo del sitio">
+    <a href="../index.html" id="brand">
+      <img class="logo" src="../Assets/hurd.ico" alt="Logo del sitio">
       <div class="">Bárdica</div>
     </a>
     <!-- Barra de búsqueda de canciones o artistas -->
@@ -41,7 +41,7 @@
           <span class="line line3"></span>
         </div>
         <ul class="menuItems">
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="../index.html">Inicio</a></li>
           <li><a href="library.html">Biblioteca</a></li>
           <li><a href="ambience.html">Ambientar</a></li>
           <li><a href="#">Únete</a></li>
@@ -78,13 +78,24 @@
         </div>
       </form>
     </section>
+    <section>
+      <article class="serviceDesc">
+        <h3 class="joinTitle">Únete a miles de usuarios en la experiencia</h3>
+        <ul class="joinList">
+          <li>Lleva contigo el ritmo a todas partes</li>
+          <li>Descarga y administra todas tus canciones libremente</li>
+          <li>Ambienta la ocasión con nuestro sistema de efectos</li>
+          <li>Disfruta de tu música en alta calidad de compresión</li>
+        </ul>
+      </article>
+    </section>
   </main>
   <footer class="">
     <!-- La barra de música tiene un estilado separado de la barra inferior -->
     <div class="musicBar mainContainer">
       <div class=" musicInfo">
         <!-- musicInfo incluye la imágen del tema actual, el nombre y el artista -->
-        <img src="Assets/Ys.jpg" alt="Disco YS IX Ultimate">
+        <img src="../Assets/Ys.jpg" alt="Disco YS IX Ultimate">
         <div class="musicDesc">
           <h4>Norse Wind</h4>
           <p>Falcom Sound Team</p>
@@ -107,6 +118,6 @@
     </div>
   </footer>
 </body>
-<script src="/Script/script.js"></script>
+<script src="../Script/script.js"></script>
 
 </html>
