--- a/Src/library.html
+++ b/Src/library.html
@@ -9,15 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bárdica-Librería </title>
   <link rel="shortcut icon" href="Assets/Hurd.ico" type="image/x-icon">
-  <link href="Styles/main.css" rel="stylesheet">
+  <link href="../Styles/main.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/04883203e6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header id="mainHeader">
     <!-- Logo de la página -->
-    <a href="index.html" id="brand">
-      <img class="logo" src="Assets/hurd.ico" alt="Logo del sitio">
+    <a href="../index.html" id="brand">
+      <img class="logo" src="../Assets/hurd.ico" alt="Logo del sitio">
       <div class="">Bárdica</div>
     </a>
     <!-- Barra de búsqueda de canciones o artistas -->
@@ -40,7 +40,7 @@
           <span class="line line3"></span>
         </div>
         <ul class="menuItems">
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="../index.html">Inicio</a></li>
           <li><a href="#">Biblioteca</a></li>
           <li><a href="ambience.html">Ambientar</a></li>
           <li><a href="join.html">Únete</a></li>
@@ -56,7 +56,7 @@
       <div class="musicCards">
         <article>
           <a href="#">
-            <img src="Assets/mester-de-juglaria.jpg" alt="Disco Mester de Juglaria">
+            <img src="../Assets/mester-de-juglaria.jpg" alt="Disco Mester de Juglaria">
             <h3 class="subtitle">Mester de Juglaría</h3>
           </a>
           <p><a href="#">Saurom</a>-1M de visitas</p>
@@ -64,7 +64,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/aeterna.jpg" alt="Disco Легенда Начинается">
+            <img src="../Assets/aeterna.jpg" alt="Disco Легенда Начинается">
             <h3 class="subtitle">Folk Metal Mix</h3>
           </a>
           <p>Aeterna, Storm Seeker, Nordheim...</p>
@@ -72,7 +72,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/in-waves.jpg" alt="Disco In Waves">
+            <img src="../Assets/in-waves.jpg" alt="Disco In Waves">
             <h3 class="subtitle">In Waves</h3>
           </a>
           <p><a href="#">Trivium</a>-10 M de visitas</p>
@@ -80,7 +80,7 @@
 
         <article>
           <a href="#">
-            <img src="Assets/dusk-of-the-ages.jpg" alt="Disco Dusk of the Ages">
+            <img src="../Assets/dusk-of-the-ages.jpg" alt="Disco Dusk of the Ages">
             <h3 class="subtitle">Dusk of the Ages</h3>
           </a>
           <p><a href="#">Furor Gallico</a>-2M de visitas</p>
@@ -121,7 +121,7 @@
     <div class="musicBar mainContainer">
       <div class=" musicInfo">
         <!-- musicInfo incluye la imágen del tema actual, el nombre y el artista -->
-        <img src="Assets/Ys.jpg" alt="Disco YS IX Ultimate">
+        <img src="../Assets/Ys.jpg" alt="Disco YS IX Ultimate">
         <div class="musicDesc">
           <h4>Norse Wind</h4>
           <p>Falcom Sound Team</p>
@@ -146,6 +146,6 @@
       formato desktop -->
   </footer>
 </body>
-<script src="/Script/script.js"></script>
+<script src="../Script/script.js"></script>
 
 </html>
