--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="">Bárdica</div>
     </a>
     <!-- Barra de búsqueda de canciones o artistas -->
-    <form id="bar" action="search.html">
+    <form id="bar" action="Src/search.html">
       <a class="">
         <i class="fas fa-search" id="magnifier"></i>
         <input id="searchBar" name='buscar' placeholder="Buscar" type="text">
@@ -42,10 +42,10 @@
         </div>
         <ul class="menuItems">
           <li><a href="#">Inicio</a></li>
-          <li><a href="library.html">Biblioteca</a></li>
-          <li><a href="ambience.html">Ambientar</a></li>
-          <li><a href="join.html">Únete</a></li>
-          <li><a href="about.html">Sobre nosotros</a></li>
+          <li><a href="Src/library.html">Biblioteca</a></li>
+          <li><a href="Src/ambience.html">Ambientar</a></li>
+          <li><a href="Src/join.html">Únete</a></li>
+          <li><a href="Src/about.html">Sobre nosotros</a></li>
         </ul>
       </div>
     </nav>
@@ -53,6 +53,13 @@
 
   <main class="mainContainer">
     <!-- Cada section incluye 4 cards ordenadas en 2x2 -->
+    <section>
+      <article>
+        <p id="siteDesc">
+          Bárdica es un sitio de almacenamiento y reproducción remoto de música. Disfruta de tu música favorita donde quiera que estés.
+        </p>
+      </article>
+    </section>
     <section>
       <h1 class="">Favoritos Personales</h1>
       <div class="musicCards">
@@ -192,6 +199,6 @@
     </div>
   </footer>
 </body>
-<script src="/Script/script.js"></script>
+<script src="Script/script.js"></script>
 
 </html>
