--- a/Src/about.html
+++ b/Src/about.html
@@ -9,15 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bárdica-Conócenos </title>
     <link rel="shortcut icon" href="Assets/Hurd.ico" type="image/x-icon">
-    <link href="Styles/main.css" rel="stylesheet">
+    <link href="../Styles/main.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/04883203e6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header id="mainHeader">
         <!-- Logo de la página -->
-        <a href="index.html" id="brand">
-            <img class="logo" src="Assets/hurd.ico" alt="Logo del sitio">
+        <a href="../index.html" id="brand">
+            <img class="logo" src="../Assets/hurd.ico" alt="Logo del sitio">
             <div class="">Bárdica</div>
         </a>
         <!-- Barra de búsqueda de canciones o artistas -->
@@ -40,7 +40,7 @@
                     <span class="line line3"></span>
                 </div>
                 <ul class="menuItems">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
                     <li><a href="library.html">Biblioteca</a></li>
                     <li><a href="ambience.html">Ambientar</a></li>
                     <li><a href="join.html">Únete</a></li>
@@ -59,7 +59,7 @@
                     </h3>
                 </div>
                 <div class="quoteContent">
-                    <img src="Assets/alestorm.jpg" alt="Imagen Alestorm">
+                    <img src="../Assets/alestorm.jpg" alt="Imagen Alestorm">
                     <p class="quote">
                         La música es sinónimo de libertad, de tocar lo que quieras y como quieras,
                         siempre que sea bueno y tenga pasión, que la música sea el alimento del amor.
@@ -80,7 +80,7 @@
                         Ya no se trataba de una herramienta para unos pocos; era tiempo de expandirse.
                     </p>
                     <div class="imageContainer">
-                        <img src="Assets/project.jpg" alt="Imagen proyecto IT">
+                        <img src="../Assets/project.jpg" alt="Imagen proyecto IT">
                         <p>Nuestro equipo en un día normal de trabajo.</p>
                     </div>
 
@@ -105,7 +105,7 @@
                         creciendo!
                     </p>
                     <div class="imageContainer">
-                        <img src="Assets/crit role.jpg" alt="Grupo Crit Role">
+                        <img src="../Assets/crit role.jpg" alt="Grupo Crit Role">
                         <p>Critical Role hace uso de Bárdica</p>
                     </div>
 
@@ -129,7 +129,7 @@
         <div class="musicBar mainContainer">
             <div class=" musicInfo">
                 <!-- musicInfo incluye la imágen del tema actual, el nombre y el artista -->
-                <img src="Assets/Ys.jpg" alt="Disco YS IX Ultimate">
+                <img src="../Assets/Ys.jpg" alt="Disco YS IX Ultimate">
                 <div class="musicDesc">
                     <h4>Norse Wind</h4>
                     <p>Falcom Sound Team</p>
@@ -152,6 +152,6 @@
         </div>
     </footer>
 </body>
-<script src="Script/script.js"></script>
+<script src="../Script/script.js"></script>
 
 </html>
