--- a/Src/search.html
+++ b/Src/search.html
@@ -9,15 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bárdica-Resultados </title>
   <link rel="shortcut icon" href="Assets/Hurd.ico" type="image/x-icon">
-  <link href="Styles/main.css" rel="stylesheet">
+  <link href="../Styles/main.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/04883203e6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header id="mainHeader">
     <!-- Logo de la página -->
-    <a href="index.html" id="brand">
-      <img class="logo" src="Assets/hurd.ico" alt="Logo del sitio">
+    <a href="../index.html" id="brand">
+      <img class="logo" src="../Assets/hurd.ico" alt="Logo del sitio">
       <div class="">Bárdica</div>
     </a>
     <!-- Barra de búsqueda de canciones o artistas -->
@@ -42,7 +42,7 @@
           <span class="line line3"></span>
         </div>
         <ul class="menuItems">
-          <li><a href="index.html">Inicio</a></li>
+          <li><a href="../index.html">Inicio</a></li>
           <li><a href="library.html">Biblioteca</a></li>
           <li><a href="ambience.html">Ambientar</a></li>
           <li><a href="join.html">Únete</a></li>
@@ -71,7 +71,7 @@
       <h2 class="">Mejor resultado</h2>
       <article>
         <a href="#">
-          <img src="Assets/mester-de-juglaria.jpg">
+          <img src="../Assets/mester-de-juglaria.jpg">
         </a>
         <div>
           <a href="#">
@@ -86,7 +86,7 @@
       <h2 class="">Canciones</h2>
       <article>
         <a href="#">
-          <img src="Assets/Mester.jpg" alt="Disco Mester de Juglaria">
+          <img src="../Assets/Mester.jpg" alt="Disco Mester de Juglaria">
         </a>
         <div>
           <a href="#">
@@ -98,7 +98,7 @@
 
       <article>
         <a href="#">
-          <img src="Assets/mester-de-juglaria.jpg" alt="Tema Mester de Juglaria">
+          <img src="../Assets/mester-de-juglaria.jpg" alt="Tema Mester de Juglaria">
         </a>
         <div>
           <a href="#">
@@ -110,7 +110,7 @@
 
       <article>
         <a href="#">
-          <img src="Assets/mester-de-juglaria.jpg" alt="Disco Mester de Juglaria">
+          <img src="../Assets/mester-de-juglaria.jpg" alt="Disco Mester de Juglaria">
         </a>
         <div>
           <a href="#">
@@ -125,7 +125,7 @@
       <h2 class="">Álbumes</h2>
       <article>
         <a href="#">
-          <img src="Assets/mester-de-juglaria.jpg" alt="Disco Mester de Juglaria">
+          <img src="../Assets/mester-de-juglaria.jpg" alt="Disco Mester de Juglaria">
         </a>
         <div>
           <a href="#">
@@ -137,7 +137,7 @@
 
       <article>
         <a href="#">
-          <img src="Assets/Vida.jpg" alt="Disco Vida">
+          <img src="../Assets/Vida.jpg" alt="Disco Vida">
         </a>
         <div>
           <a href="#">
@@ -149,7 +149,7 @@
 
       <article>
         <a href="#">
-          <img src="Assets/legado.jpg" alt="Disco El Legado de los Juglares">
+          <img src="../Assets/legado.jpg" alt="Disco El Legado de los Juglares">
         </a>
         <div>
           <a href="#">
@@ -164,7 +164,7 @@
       <h2 class="">Listas de reproducción</h2>
       <article>
         <a href="#">
-          <img src="Assets/mester-de-juglaria.jpg" alt="Disco Mester de Juglaria">
+          <img src="../Assets/mester-de-juglaria.jpg" alt="Disco Mester de Juglaria">
         </a>
         <div>
           <a href="#">
@@ -176,7 +176,7 @@
 
       <article>
         <a href="#">
-          <img src="Assets/Rean.jpg" alt="Disco Sen No Kiseki IV">
+          <img src="../Assets/Rean.jpg" alt="Disco Sen No Kiseki IV">
         </a>
         <div>
           <a href="#">
@@ -191,7 +191,7 @@
       <h2 class="">Artistas</h2>
       <article class="artists">
         <a href="#">
-          <img class="" src="Assets/Saurom-band.jpg" alt="Banda Saurom">
+          <img class="" src="../Assets/Saurom-band.jpg" alt="Banda Saurom">
         </a>
         <div>
           <a href="#">
@@ -203,7 +203,7 @@
 
       <article class="artists">
         <a href="#">
-          <img class="" src="Assets/Salduie.jpg" alt="Banda Salduie">
+          <img class="" src="../Assets/Salduie.jpg" alt="Banda Salduie">
         </a>
         <div>
           <a href="#">
@@ -219,7 +219,7 @@
     <div class="musicBar mainContainer">
       <div class=" musicInfo">
         <!-- musicInfo incluye la imágen del tema actual, el nombre y el artista -->
-        <img src="Assets/Ys.jpg" alt="Disco YS IX Ultimate">
+        <img src="../Assets/Ys.jpg" alt="Disco YS IX Ultimate">
         <div class="musicDesc">
           <h4>Norse Wind</h4>
           <p>Falcom Sound Team</p>
@@ -244,6 +244,6 @@
       formato desktop -->
   </footer>
 </body>
-<script src="/Script/script.js"></script>
+<script src="../Script/script.js"></script>
 
 </html>
